update for fetch glossary
